--- a/css/FooterEfect.css
+++ b/css/FooterEfect.css
@@ -1,6 +1,6 @@
 .header {
     position:flex;
-    background: linear-gradient(60deg, #ccfbff 0%, #EF96C5 100%);
+    background: linear-gradient(60deg, #EF91A1 0%, #FEB05F 100%);
   }
   
   .inner-header {
