--- a/css/contenidoP.css
+++ b/css/contenidoP.css
@@ -8,7 +8,7 @@
   position: absolute;
   left: 0;
   top: 0;
-  box-shadow: inset 0px 0px 120px 30px rgba(155, 113, 150, 0.35);
+  box-shadow: inset 0px 0px 120px 30px rgb(239, 145, 161,1);
   width: 100%;
   height: 100%;
   pointer-events: none;
@@ -27,7 +27,7 @@
   scroll-snap-points-y: repeat(100%);
   scroll-snap-align: left;
   scroll-behavior: smooth;
-  background: rgb(217, 196, 239);
+  background: rgb(241, 85, 76, 1);
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
