--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,700&display=swap');
 * {
     box-sizing: border-box;
     margin: 0;
@@ -19,7 +20,7 @@
   }
   .hg-sidebar,
   .holy-grail-content {
-
+    
     padding: 0px;
   }
   
@@ -31,10 +32,13 @@
   
   .holy-grail-content {
     color: #777;
+    margin-left: 15px;
+    margin-right: 15px;
   }
   
   .holy-grail {
     min-height: 100vh;
+    
   }
   
   .holy-grail,
