--- a/css/FooterEfect.css
+++ b/css/FooterEfect.css
@@ -1,6 +1,7 @@
 .header {
     position:flex;
     background: linear-gradient(60deg, #EF91A1 0%, #FEB05F 100%);
+    margin-top: 25px;
   }
   
   .inner-header {
@@ -32,6 +33,10 @@
     text-align:center;
     background-color: white;
     color: #000;
+  }
+
+  #letrafooter{
+    font-size: 23px;
   }
   
   /* Animation */
