--- a/css/productos.css
+++ b/css/productos.css
@@ -1,54 +1,43 @@
-
-.wrap {
-    overflow: hidden;
-    margin: 10px;
-  max-width: 1500px;
-  margin-left: auto;
-  margin-right: auto;
-}
-.box {
-    float: left;
-    position: relative;
-    width: 20%;
-    padding-bottom: 20%;
-}
-
-.boxInner {
-    position: absolute;
-    left: 10px;
-    right: 10px;
-    top: 10px;
-    bottom: 10px;
-    overflow: hidden;
-}
- .boxInner img { width: 100% }
-
-
-@media only screen and (max-width:480px) { 
-    /* Smartphone view: 1 tile */
-    .box {
-        width: 100%;
-        padding-bottom: 100%;
-    }
-}
-@media only screen and (max-width:857px) and (min-width:481px) { 
-    /* Tablet view: 2 tiles */
-    .box {
-        width: 50%;
-        padding-bottom: 50%;
-    }
-}
-@media only screen and (max-width:1050px) and (min-width:651px) { 
-    /* Small desktop / ipad view: 3 tiles */
-    .box {
-        width: 33.3%;
-        padding-bottom: 33.3%;
-    }
-}
-@media only screen and (max-width:1290px) and (min-width:1051px) { 
-    /* Medium desktop: 4 tiles */
-    .box {
-        width: 25%;
-        padding-bottom: 25%;
-    }
-}
+* {
+    padding:0;
+    margin:0;
+    font-family:sans-serif;
+  }
+  .cont {
+    width:100%;
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:center;
+  }
+  .card {
+    margin:15px;
+    transition:all .2s ease-out;
+    overflow:hidden;
+    border-radius: 15px;
+    box-sizing:content-box;
+    max-width:300px;
+    display:flex;
+    flex-direction:column;
+    text-align:center;
+    align-items:center;
+    box-shadow: 0px 8px 10px rgba(0,0,0,.5);
+    transform:scale(1);
+  }
+  .card:hover {
+    transform:scale(1.05);
+  }
+  img {
+    width:100%;
+  }
+  h2 , p {
+     width:100%;
+  }
+  h2 {
+    color: #2b1f0c;
+    padding:20px 0px 0px 0px;
+  }
+  p {
+    padding:20px 25px 30px 25px;
+    box-sizing:border-box;
+  }
+  
