--- a/css/FooterEfect.css
+++ b/css/FooterEfect.css
@@ -1,6 +1,6 @@
 .header {
     position:flex;
-    background: linear-gradient(60deg, #EF91A1 0%, #FEB05F 100%);
+    background: linear-gradient(60deg, #F2F2F2 0%, #FFC6D3 100%);
     margin-top: 25px;
   }
   
