--- a/css/contenidoP.css
+++ b/css/contenidoP.css
@@ -8,7 +8,7 @@
   position: absolute;
   left: 0;
   top: 0;
-  box-shadow: inset 0px 0px 120px 30px rgb(239, 145, 161,1);
+  box-shadow: inset 0px 0px 120px 30px rgb(226, 227, 245);
   width: 100%;
   height: 100%;
   pointer-events: none;
@@ -21,13 +21,13 @@
 .carousel ul {
   overflow: auto; 
   display: flex; 
-  height: 500px;
-  max-height: 500px;
+  height: 570px;
+  max-height: 580px;
   scroll-snap-type: x mandatory;
   scroll-snap-points-y: repeat(100%);
   scroll-snap-align: left;
   scroll-behavior: smooth;
-  background: rgb(241, 85, 76, 1);
+  background: rgb(231, 119, 177);
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
@@ -63,7 +63,7 @@
   padding: 20px 15px;
 }
 .carousel ul li > div > div {
-  background: url(/img/pastel5.jpg) center center / cover no-repeat; 
+  background: url(/img/WhatsApp\ Image\ 2022-10-05\ at\ 10.32.52\ AM.jpeg) center center / cover no-repeat; 
   height: 110px;
   margin-bottom: 15px;
   margin: -20px -15px 15px;
@@ -84,10 +84,18 @@
 
 /* DEMO CSS */
 .carousel ul li:nth-child(2) > div > div,
-.carousel ul li:nth-child(6) > div > div {background-image: url(/img/pastel1.jpg);}
+.carousel ul li:nth-child(6) > div > div {background-image: url(/img/WhatsApp\ Image\ 2022-10-05\ at\ 10.39.38\ AM.jpeg);}
 .carousel ul li:nth-child(3) > div > div,
-.carousel ul li:nth-child(7) > div > div {background-image: url(/img/pastel2.jpg);}
+.carousel ul li:nth-child(7) > div > div {background-image: url(/img/WhatsApp\ Image\ 2022-10-05\ at\ 10.51.39\ AM\ \(1\).jpeg);}
 .carousel ul li:nth-child(4) > div > div,
-.carousel ul li:nth-child(8) > div > div {background-image: url(/img/pastel3.jpg);}
+.carousel ul li:nth-child(8) > div > div {background-image: url(/img/WhatsApp\ Image\ 2022-10-05\ at\ 10.47.50\ AM.jpeg);}
 p, h2 {margin: 15px auto; padding: 0 15px; max-width: 800px;}
 h2 {margin-top: 30px;}
+
+
+
+/* css para productos sencillos */
+
+.textoproductos{
+  text-align: justify;
+}
