--- a/css/menutest.css
+++ b/css/menutest.css
@@ -8,7 +8,7 @@
     position: relative;
     z-index: 9999;
     width: 100%;
-    background: linear-gradient(60deg, #EF91A1 0%, #FEB05F 100%);
+    background: linear-gradient(60deg, #F2F2F2 0%, #FFC6D3 100%);
     
     
 }
@@ -41,7 +41,7 @@
     transition: all 0.5s ease;
 }
 .nav-links li a:hover {
-    background: #E9ECF4;
+    background: #A3A6C5;
 	border-radius: 12px;
 }
 .nav-links .mobile-item {
@@ -143,8 +143,8 @@
     color: #f2f2f2;
 }
 .wrapper .btn {
-    color: #fff;
-    font-size: 20px;
+    color: rgb(34, 30, 30);
+    font-size: 30px;
     cursor: pointer;
     display: none;
 }
@@ -335,55 +335,16 @@
   }
   #image img {
     margin-top: 12px;
-    width: 20%;
+    width: 25%;
     margin-bottom: 12px;
 
   }
   .cotenidoMain{
-    background: linear-gradient(60deg, #EF91A1 0%, #FEB05F 100%);
+    background: linear-gradient(60deg, #F2F2F2 0%, #FFC6D3 100%);
       
   }
   
-  /*Styling Buttons*/
-  .loginWEB{
-    background-color:#fbb03b;
-    border: 1.5px solid #f2f5f7;
-    border-radius: 2em;
-    padding: 0.6rem 0.8rem;
-    margin-left: 2vw;
-    font-size: 1rem;
-    cursor: pointer;
-  
-  }
-  
-  .loginWEB:hover {
-    color: #ffffff;
-    background-color: #f2f5f7;
-    border:1.5px solid #f2f5f7;
-    transition: all ease-in-out 350ms;
-  }
-  
-  
-  /* estilo de boton cerrar sesión */
-  .loginWEBEND{
-    background-color:#ff1e00;
-    border: 1.5px solid #f2f5f7;
-    border-radius: 2em; 
-    padding: 0.6rem 0.8rem;
-    margin-left: 2vw;
-    font-size: 1rem;
-    cursor: pointer;
-  
-  }
-  
-  .loginWEBEND:hover {
-    color: #ffffff;
-    background-color: #f2f5f7;
-    border:1.5px solid #f2f5f7;
-    transition: all ease-in-out 350ms;
-  }
-  
-  /* fin de estilo de boton cerrar sesión */
+
   
   
   
