--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -11,6 +11,11 @@
     margin-top: 15px;
     margin-bottom: 15px;
 }
+#letranosostros{
+  color: #030303;
+  font-size: 40px;
+  font-family: 'Lato', sans-serif;
+}
 
 #contenedorinfo{
     height: 500px;
@@ -29,13 +34,19 @@
 
 .jumbotron{
     margin-top: 15px;
+    
 }
+#fondojumbo{
+  background: linear-gradient(60deg, #F2F2F2 0%, #FFC6D3 100%);
+}
+
+
 
 .conttextoanimation{
     margin:0px;
     font-family:'Roboto';
     text-align:center;
-    background-image: url("/img/pastel2.jpg");
+    background-image: url("/img/WhatsApp\ Image\ 2022-10-05\ at\ 10.42.52\ AM.jpeg");
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -92,3 +103,48 @@
     100% {margin-top:-270px;}
   }
   
+
+  /* animacion de texto movimiento */
+  @keyframes filling {
+    from{
+      background-position: center 25%;
+    }
+    to {
+      background-position: center 50%;
+    }
+  }
+  
+  .container-text {
+    background-image:  url(/img/WhatsApp\ Image\ 2022-10-05\ at\ 10.50.04\ AM.jpeg);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    color:  #FFFFFF;
+    padding-top: 20px;
+    font-size: 120px;
+    font-family: 'Lato', sans-serif;
+    animation: filling 3s ease forwards;
+  }
+
+  /* fin de animacion de movimiento */
+
+  /* inicio de texto para historia */
+  @import url(https://fonts.googleapis.com/css?family=Open+Sans);
+#circle-shape-example { 
+  font-family: Open Sans, sans-serif; 
+  margin: 2rem; 
+}
+#circle-shape-example p { 
+  line-height: 1.8; 
+}
+#circle-shape-example .curve { 
+  width: 35%; height: auto;
+  min-width: 150px;
+  float: left;
+  margin-right:6rem; 
+  border-radius: 50%;
+  -webkit-shape-outside:circle();
+  shape-outside:circle();
+}
+.textohistoria{
+  text-align: justify;
+}
