--- a/css/productos.css
+++ b/css/productos.css
@@ -1,43 +1,63 @@
-* {
-    padding:0;
-    margin:0;
-    font-family:sans-serif;
-  }
-  .cont {
-    width:100%;
-    display:flex;
-    flex-wrap:wrap;
-    justify-content:center;
-  }
-  .card {
-    margin:15px;
-    transition:all .2s ease-out;
-    overflow:hidden;
-    border-radius: 15px;
-    box-sizing:content-box;
-    max-width:300px;
-    display:flex;
-    flex-direction:column;
+
+  /* sssssssssssssssssss */
+  h1{
+    font-family: Satisfy;
+    font-size:50px;
     text-align:center;
-    align-items:center;
-    box-shadow: 0px 8px 10px rgba(0,0,0,.5);
-    transform:scale(1);
+    color:black;
+    padding:1%;
   }
-  .card:hover {
-    transform:scale(1.05);
+  #gallery{
+    -webkit-column-count:4;
+    -moz-column-count:4;
+    column-count:4;
+    
+    -webkit-column-gap:20px;
+    -moz-column-gap:20px;
+    column-gap:20px;
   }
-  img {
+  @media (max-width:1200px){
+    #gallery{
+    -webkit-column-count:3;
+    -moz-column-count:3;
+    column-count:3;
+      
+    -webkit-column-gap:20px;
+    -moz-column-gap:20px;
+    column-gap:20px;
+  }
+  }
+  @media (max-width:800px){
+    #gallery{
+    -webkit-column-count:2;
+    -moz-column-count:2;
+    column-count:2;
+      
+    -webkit-column-gap:20px;
+    -moz-column-gap:20px;
+    column-gap:20px;
+  }
+  }
+  @media (max-width:600px){
+    #gallery{
+    -webkit-column-count:1;
+    -moz-column-count:1;
+    column-count:1;
+  }  
+  }
+  #gallery img,#gallery video {
     width:100%;
-  }
-  h2 , p {
-     width:100%;
-  }
-  h2 {
-    color: #2b1f0c;
-    padding:20px 0px 0px 0px;
-  }
-  p {
-    padding:20px 25px 30px 25px;
-    box-sizing:border-box;
+    height:auto;
+    margin: 4% auto;
+    box-shadow:-3px 5px 15px #000;
+    cursor: pointer;
+    -webkit-transition: all 0.2s;
+    transition: all 0.2s;
+    border-radius: 15px;
   }
   
+  .GaleriaFotosPremedia{
+    margin-left: 20px;
+    margin-right: 20px;
+    padding: 60px;
+  }
