--- a/css/contenindex.css
+++ b/css/contenindex.css
@@ -102,7 +102,7 @@
 }
 
 .text-box-middle {
-  font-size: 3.5rem;
+  font-size: 1.5rem;
   font-weight: 700;
   text-shadow: 2px 2px 10px #0000006c;
 }
@@ -185,7 +185,7 @@
 
 
 @media screen and (min-width: 1024px) {
-  html {
+  #contenedorcartas {
     font-size: 62.5%;
   }
 
