--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,6 +14,12 @@
     color: #F2EEE3;
   }
   
+  #letranosostros{
+    color: #030303;
+    font-size: 40px;
+    font-family: 'Lato', sans-serif;
+  }
+
   .holy-grail header
   {
   text-align: center;
