--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -46,7 +46,7 @@
     margin:0px;
     font-family:'Roboto';
     text-align:center;
-    background-image: url("/img/WhatsApp\ Image\ 2022-10-05\ at\ 10.42.52\ AM.jpeg");
+    background-image: url("/img/Portada/fotosabor.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 }
